RESOLVED FIXED27606
WebCore/page/Console.cpp does not conform to style standards
https://bugs.webkit.org/show_bug.cgi?id=27606
Summary WebCore/page/Console.cpp does not conform to style standards
Mike Fenton
Reported 2009-07-23 08:29:43 PDT
cpplint reports a number of valid style fixes that should be made to WebCore/page/Console.cpp.
Attachments
Style patch for Console.cpp (4.15 KB, patch)
2009-07-23 08:50 PDT, Mike Fenton
no flags
Replacement patch for Console.cpp (4.02 KB, patch)
2009-07-23 08:59 PDT, Mike Fenton
levin: review+
Mike Fenton
Comment 1 2009-07-23 08:50:18 PDT
Created attachment 33332 [details] Style patch for Console.cpp
Mike Fenton
Comment 2 2009-07-23 08:59:14 PDT
Created attachment 33335 [details] Replacement patch for Console.cpp
David Levin
Comment 3 2009-07-23 09:26:17 PDT
Assign to levin for landing.
David Levin
Comment 4 2009-07-24 00:41:35 PDT
David Levin
Comment 5 2009-07-24 00:43:13 PDT
Ignore that other committed msg. The change log had the wrong bug number :( Committed as http://trac.webkit.org/changeset/46271.
Note You need to log in before you can comment on or make changes to this bug.