2009-07-23  Mike Fenton  <mike.fenton@torchmobile.com>

Reviewed by David Levin.

        Update WebCore/page/Console.cpp to conform to WebKit
        Style Guidelines as identified by cpplint.py.
        https://bugs.webkit.org/show_bug.cgi?id=27606

        * page/Console.cpp:
        (WebCore::printMessageSourceAndLevelPrefix):
        (WebCore::Console::profile):
        (WebCore::Console::time):

Canonical link: https://commits.webkit.org/37884@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46271 268f45cc-cd09-0410-ab3c-d52691b4dbfc